app-aside Fix overlapping content on Safari
Flex-shrink default value of 1 on sidebar was causing sidebar to overlap
with main content in some views, such as build view. Setting it to 0
allows the aside to size itself to its content and prevent overlap.

--- a/resources/assets/css/inner/aside.less
+++ b/resources/assets/css/inner/aside.less
@@ -57,6 +57,10 @@
   }                             //
 }
 
+.app-aside {
+  .flex(0 0 auto);
+}
+
 .ui-v2 .app-aside {
   min-width: @new_aside_menu_width;
 }
